# docs/swagger.json
@@ -28,7 +28,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_admin_handler.broadcastRequest"
+                            "$ref": "#/definitions/modules_admin_handler.broadcastRequest"
                         }
                     }
                 ],
@@ -286,7 +286,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_admin_handler.createUserRequest"
+                            "$ref": "#/definitions/modules_admin_handler.createUserRequest"
                         }
                     }
                 ],
@@ -500,7 +500,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_admin_handler.setRoleRequest"
+                            "$ref": "#/definitions/modules_admin_handler.setRoleRequest"
                         }
                     }
                 ],
@@ -547,6 +547,87 @@
                 }
             }
         },
+        "/auth/2fa/disable": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Выключить 2FA",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_pkg_response.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/2fa/enable": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Включить 2FA",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_pkg_response.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/2fa/verify": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Подтвердить 2FA (OTP) при входе",
+                "parameters": [
+                    {
+                        "description": "two_factor_token, code",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/modules_auth_handler.verify2FARequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_pkg_response.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/change-email": {
             "post": {
                 "security": [
@@ -571,7 +652,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_auth_handler.changeEmailRequest"
+                            "$ref": "#/definitions/modules_auth_handler.changeEmailRequest"
                         }
                     }
                 ],
@@ -609,7 +690,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_auth_handler.changeEmailRequest"
+                            "$ref": "#/definitions/modules_auth_handler.changeEmailRequest"
                         }
                     }
                 ],
@@ -647,7 +728,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_auth_handler.changePasswordRequest"
+                            "$ref": "#/definitions/modules_auth_handler.changePasswordRequest"
                         }
                     }
                 ],
@@ -685,7 +766,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_auth_handler.changePhoneRequest"
+                            "$ref": "#/definitions/modules_auth_handler.changePhoneRequest"
                         }
                     }
                 ],
@@ -723,7 +804,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_auth_handler.changePhoneRequest"
+                            "$ref": "#/definitions/modules_auth_handler.changePhoneRequest"
                         }
                     }
                 ],
@@ -756,7 +837,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_auth_handler.forgotPasswordRequest"
+                            "$ref": "#/definitions/modules_auth_handler.forgotPasswordRequest"
                         }
                     }
                 ],
@@ -960,7 +1041,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_auth_handler.otpRequest"
+                            "$ref": "#/definitions/modules_auth_handler.otpRequest"
                         }
                     }
                 ],
@@ -1017,7 +1098,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_auth_handler.resetPasswordRequest"
+                            "$ref": "#/definitions/modules_auth_handler.resetPasswordRequest"
                         }
                     }
                 ],
@@ -1079,7 +1160,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_auth_handler.verifyEmailRequest"
+                            "$ref": "#/definitions/modules_auth_handler.verifyEmailRequest"
                         }
                     }
                 ],
@@ -1112,7 +1193,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_auth_handler.verifyOTPRequest"
+                            "$ref": "#/definitions/modules_auth_handler.verifyOTPRequest"
                         }
                     }
                 ],
@@ -2570,7 +2651,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/modules_contact_handler.syncRequest"
+                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_contact_handler.syncRequest"
                         }
                     }
                 ],
@@ -5372,7 +5453,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/modules_user_handler.userStatusRequest"
+                            "$ref": "#/definitions/github_com_jeogram_messenger_internal_modules_user_handler.userStatusRequest"
                         }
                     }
                 ],
@@ -5563,6 +5644,17 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "github_com_jeogram_messenger_internal_modules_auth_handler.verify2FARequest": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "two_factor_token": {
                     "type": "string"
                 }
             }
@@ -6560,6 +6652,17 @@
                     "type": "string"
                 },
                 "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "modules_auth_handler.verify2FARequest": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "two_factor_token": {
                     "type": "string"
                 }
             }
